--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
     <section class="hero-image">
       <div class="container">
-      <h1 class="heading">Козленко Сергей, начинающий верстальщик</h1>
+      <h1 class="heading">Козленко Сергей, начинающий верстальщик и разработчик</h1>
       <p>Junior верстальщик</p>
       </div>
 
