--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="container">
       Контакты
       тел.+79184454976
-      почта. kozlenko41@mail.ru
+      почта. kozlenko41@mail.ru;
         </div>
     </header>
 
